--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card card-body border-info h-100"  id="profile-wrapper">
-                    <img id="profile-pic" src="{% static 'images/profile.jpg' %}" >
+                    <img id="profile-pic" src="images/profile.jpg" >
                     <hr>
                     <h3>Hi, I'm Ian Wandeto.</h3>
                     <p>I love coding and I am a Cyber Security Enthusiast</p>
