--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                             <img class="social" src="images/linkedin.png"></a></li>
                         <li><a href="mailto:wandettoian@gmail.com" target="_blank">
                             <img class="social" src="images/gmail.png" ></a></li>
+                        <li><a href="https://twitter.com/iWandetto" target="_blank">
+                                <img class="social" src="images/twitter.png"></a></li>
                         <li><a href="tel:+254716815687" target="_blank">
                             <img class="social" src="images/telephone.png"></a></li>
                             <hr> 
