--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <img class="social" src="images/telephone.png"></a></li>
                             <hr> 
                         <li><button class="button" style="vertical-align:right">
-                            <a href="https://drive.google.com/file/d/1t3UAsjjXEBxHlTfoc-oa5MI_YdsQJtJ3/view?usp=share_link" target="_blank">
+                            <a href="https://drive.google.com/file/d/1NSyKuALRc184lcGpQ1sIcyfJlYuPDCOA/view?usp=sharing" target="_blank">
                             <span> View Resume </span>
                             </a></button>
                         </li> 
@@ -60,22 +60,47 @@
                     <h3>Skills</h3>
                     <hr>
                     <ol class="skills">
+                        <li>Networking</li>
+                        <li>Maintenance</li>
+                        <li>Git & Github</li>
+                        <li>Computer Software and Hardware</li>
+                        <li><b><i>Programming</i></b></li>
                         <li>CSS</li>
                         <li>Python</li>
                         <li>Django</li>
                         <li>HTML 5</li>
-                        <li>Networking</li>
-                        <li>Git & Github</li>
-                        <li>Maintanance</li>
-                        <li>Shell Scripting</li>
                         <li>The C Language</li>
-                        <li>Computer Software & Hardware</li>
+                        <li>Shell Scripting</li>
+                        <li><b><i>OS</i></b></li>
+                        <li>Linux</li>
+                        <li>Mac OS</li>
+                        <li>Ms Windows</li>                                           
                     </ol>
                 </div>
             </div>
             <div class="col-md-8">
                 <div class="card card-body h-100">
                     <h3>Education</h3>
+                    <hr>
+
+                    <h5>MAY 2023</h5>
+                    <p>Introduction to Cybersecurity / Cisco Networking Academy</p>
+                    <p>Certificate awarded upon completing introduction to Cybersecurity Course.</p>
+                    <hr>
+                    
+                    <h5>APRIL 2023</h5>
+                    <p>Cybersecurity Essentials / Cisco Networking Academy</p>
+                    <p>Enrolled for Cyber Security Essentials Program.</p>
+                    <hr>
+
+                    <h5>AUGUST 2022</h5>
+                    <p>Cloud Security / Cisco Networking Academy</p>
+                    <p>Enrolled for Cloud Security Course.</p>
+                    <hr>
+
+                    <h5>AUGUST 2022</h5>
+                    <p>Software Development / Power Learn Project Africa</p>
+                    <p>Enrolled for Software Development Program by PLP Africa.</p>
                     <hr>
 
                     <h5>AUGUST 2022</h5>
@@ -98,6 +123,11 @@
             <div class="col-md-7">
                 <div class="card card-body h-100">
                     <h3>My Work Experience</h3>
+                    <hr>
+                    <h5><b> Student Ambassador /</b> PLP Africa</h5>
+                    <p>06/04/2023 – DATE</p>
+                    <hr>
+
                     <hr>
                     <h5><b> Data Analyst Intern /</b> ManyMangoes</h5>
                     <p>30/09/2022 – 30/11/2022</p>
@@ -129,16 +159,18 @@
                     <p>Tel: 0702624049| Email: <u>jonesbaraza@gmail.com</u></p>
                     <hr>
 
-                    <h5>Abdisalam Aga Tuka</h5>
-                    <p>Senior Officer ICT Department, University of Nairobi</p>
-                    <p>Tel: 0725799799| Email: <u>atuka@uonbi.ac.ke</u></p>
-                    <hr>
-
                     <h5>Clara Muiruri</h5>
                     <p>Marketing Manager, Learning and Testing Services</p>
                     <p>Tel: 0721331722| Email: <u>clara.nyambura@lts-africa.com</u></p>
                     <hr>
 
+
+                    <h5>Abdisalam Aga Tuka</h5>
+                    <p>Senior Officer ICT Department, University of Nairobi</p>
+                    <p>Tel: 0725799799| Email: <u>atuka@uonbi.ac.ke</u></p>
+                    <hr>
+
+                    
                     <h5>Kelvin Kariuki</h5>
                     <p>Lecturer, Multimedia University</p>
                     <p>Tel: 0729385557| Email: <u>kkariuki@mmu.ac.ke</u></p>
