--- a/index.html
+++ b/index.html
@@ -60,18 +60,25 @@
                     <h3>Skills</h3>
                     <hr>
                     <ol class="skills">
+                        <ul>Computing</ul>
                         <li>Networking</li>
                         <li>Maintenance</li>
                         <li>Git & Github</li>
                         <li>Computer Software and Hardware</li>
-                        <li><b><i>Programming</i></b></li>
+                        <hr>
+                        <hr>
+                        <hr>
+                        <ul><b><i>Programming</i></b></ul>
                         <li>CSS</li>
                         <li>Python</li>
                         <li>Django</li>
                         <li>HTML 5</li>
                         <li>The C Language</li>
                         <li>Shell Scripting</li>
-                        <li><b><i>OS</i></b></li>
+                        <hr>
+                        <hr>
+                        <hr>
+                        <ul><b><i>OS</i></b></ul>
                         <li>Linux</li>
                         <li>Mac OS</li>
                         <li>Ms Windows</li>                                           
@@ -128,7 +135,6 @@
                     <p>06/04/2023 – DATE</p>
                     <hr>
 
-                    <hr>
                     <h5><b> Data Analyst Intern /</b> ManyMangoes</h5>
                     <p>30/09/2022 – 30/11/2022</p>
                     <hr>
