--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
                     <h3>Skills</h3>
                     <hr>
                     <ol class="skills">
-                        <ul>Computing</ul>
+                        <ul><b><i>Computing</i></b></ul>
                         <li>Networking</li>
-                        <li>Maintenance</li>
-                        <li>Git & Github</li>
+                        <li>Maintenance</li>                        
                         <li>Computer Software and Hardware</li>
                         <hr>
                         <hr>
@@ -81,7 +80,12 @@
                         <ul><b><i>OS</i></b></ul>
                         <li>Linux</li>
                         <li>Mac OS</li>
-                        <li>Ms Windows</li>                                           
+                        <li>Ms Windows</li> 
+                        <hr>
+                        <hr>
+                        <hr>
+                        <ul><b><i>Version Control Systems</i></b></ul>
+                        <li>Git & Github</li>                                          
                     </ol>
                 </div>
             </div>
