--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
   
     <footer>
       <ul class="footer__links">
-        <!-- <li><a href="https://www.linkedin.com/in/ian-wandeto-7197821b5/"><span class="fa fa-linkedin"></span></a></li>
+        <li><a href="https://www.linkedin.com/in/ian-wandeto-7197821b5/"><span class="fa fa-linkedin"></span></a></li>
         <li><a href="https://github.com/IWANDETO"><span class="fa fa-github"></span></a></li>
         <li><a href="https://twitter.com/iWandetto"><span class="fa fa-twitter"></span></a></li>
         <li><a href="tel:+254716815687"><span class="fa fa-telephone"></span></a></li>         -->
-        <!-- <li><a href="#"><span class="fa fa-dribbble"></span></a></li> -->
+        <!-- <li><a href="#"><span class="fa fa-dribbble"></span></a></li>
 
-        <li><a href="https://github.com/IWANDETO" target="_blank">
+        <!-- <li><a href="https://github.com/IWANDETO" target="_blank">
             <img class="social" src="images/github.png"></a></li>
          <li><a href="https://www.linkedin.com/in/ian-wandeto-7197821b5/" target="_blank">
              <img class="social" src="images/linkedin.png"></a></li>
@@ -63,7 +63,7 @@
          <li><a href="https://twitter.com/iWandetto" target="_blank">
                  <img class="social" src="images/twitter.png"></a></li>
          <li><a href="tel:+254716815687" target="_blank">
-             <img class="social" src="images/telephone.png"></a></li>
+             <img class="social" src="images/telephone.png"></a></li> -->
       </ul>
     </footer>
   </div>
