--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <li><a href="https://www.linkedin.com/in/ian-wandeto-7197821b5/"><span class="fa fa-linkedin"></span></a></li>
         <li><a href="https://github.com/IWANDETO"><span class="fa fa-github"></span></a></li>
         <li><a href="https://twitter.com/iWandetto"><span class="fa fa-twitter"></span></a></li>
-        <li><a href="tel:+254716815687"><span class="fa fa-telephone"></span></a></li>         -->
-        <!-- <li><a href="#"><span class="fa fa-dribbble"></span></a></li>
+        <li><a href="tel:+254716815687"><span class="fa fa-telephone"></span></a></li>         
+        <li><a href="#"><span class="fa fa-dribbble"></span></a></li>
 
         <!-- <li><a href="https://github.com/IWANDETO" target="_blank">
             <img class="social" src="images/github.png"></a></li>
